--- a/Project_folder/images/index.html
+++ b/Project_folder/images/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Small Business | Home</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <h1 class="logo">My Business</h1>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
+    <section class="hero">
+      <h2>Welcome to My Business</h2>
+      <p>Providing quality services to our valued customers.</p>
+      <a href="services.html" class="btn">Explore Services</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 My Business | All Rights Reserved</p>
+  </footer>
+  <script src="js/script.js"></script>
+</body>
+</html>
