--- a/Project_folder/images/about.html
+++ b/Project_folder/images/about.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <h1 class="logo">My Business</h1>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
+    <section>
+      <h2>About Us</h2>
+      <p>We are a small business dedicated to delivering quality products and services to our customers.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 My Business | All Rights Reserved</p>
+  </footer>
+</body>
+</html>
